--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -1,6 +1,14 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css">
 
@@ -24,15 +32,17 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <style>
         /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
         #map {
-            height: 100%;
+            height: 85%;
         }
         /* Optional: Makes the sample page fill the window. */
         html, body {
-            height: 100%;
+            height: 83%;
             margin: 0;
             padding: 0;
         }
@@ -44,15 +54,47 @@
     <div id="map"></div>
     <script>
         function initMap() {
-			var coordinates = { lat: 32.002771, lng: 34.888544 };
-			var map = new google.maps.Map(document.getElementById('map', coordinates), {
+            var coordinates = { lat: 32.002771, lng: 34.888544 };
+            var map = new google.maps.Map(document.getElementById('map', coordinates), {
                 zoom: 4,
-				center: coordinates
+                center: coordinates
             });
         }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAx7LLopSO76G5tucyaoefZKVc3TkAypv4&callback=initMap"
             async defer></script>
+
+
+    <table class="table table-striped table-dark">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 </html>
