--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -4,22 +4,22 @@
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./Bootstrap/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="./Bootstrap/css/bootstrap.min.css">
+    
     <!-- jQuery library -->
-    <script src="Bootstrap/js/bootstrap.min.js"></script>
+    <script src="./Bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Popper JS -->
-    <script src="Bootstrap/js/jquery-3.4.1.slim.min.js"></script>
+    <script src="./Bootstrap/js/jquery-3.4.1.slim.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
-    <script src="Bootstrap/js/popper.min.js"></script>
+    <script src="./Bootstrap/js/popper.min.js"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
           integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -95,6 +95,5 @@
             </tr>
         </tbody>
     </table>
-
 </body>
 </html>
