--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -36,25 +36,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
         #map {
-            height: 70%;
-            width: 105%;
+            height: 350px;
         }
         /* Optional: Makes the sample page fill the window. */
         body, html {
             height: 65%;
             margin: 0;
             padding: 0;
-        }
-        body {
             background-image: url("/Bootstrap/css/sky.jpg");
+        }
+
+        h2 {
+            text-align: center;
+            color: #d5e1e2;
         }
 
         h3 {
             text-align: center;
+            color: black;
+        }
+
+        table, th, td {
+            padding: 15px;
+            background-color: #dbd8c7;
+        }
+
+        #flightDetails {
+            position: absolute;
+            left: 8px;
+            top: 450px;
+        }
+
+        #flightDetailsHeading {
+            position: absolute;
+            left: 245px;
+            top: 400px;
+        }
+
+        #externalFlights {
+            width: 500px;
         }
     </style>
 
@@ -65,24 +91,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <h3>My Google Maps</h3>
+                <h2>My Map</h2>
                 <div id="map"></div>
                 <script>
+                    var map;
                     function initMap() {
                         var coordinates = { lat: 32.002771, lng: 34.888544 };
-                        var map = new google.maps.Map(document.getElementById('map', coordinates), {
+                        map = new google.maps.Map(document.getElementById('map', coordinates), {
                             zoom: 4,
                             center: coordinates
                         });
                     }
+                    
                 </script>
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAx7LLopSO76G5tucyaoefZKVc3TkAypv4&callback=initMap"
-                        async defer></script>
-
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAx7LLopSO76G5tucyaoefZKVc3TkAypv4&callback=initMap"></script>
+                <h3 id="flightDetailsHeading">
+                    Flight details
+                </h3>
                 <table class="table" id="flightDetails">
-                    <h3>
-                        Flight details
-                    </h3>
                     <thead>
                         <tr>
                             <th>
@@ -104,11 +130,11 @@
                 </table>
             </div>
             <div class="col-md-5">
-                <h3>
+                <h2>
                     Internal flights
-                </h3>
+                </h2>
                 <table class="table" id="internalFlights">
-                    <thead>
+                    <thead id="internalFlightsHead">
                         <tr>
                             <th>
                                 Flight ID
@@ -127,11 +153,11 @@
                     <tbody id="internalFlightsBody">
                     </tbody>
                 </table>
-                <h3>
+                <h3 id="externalFlightsHeading">
                     External flights
                 </h3>
-                <table class="table" id="externalFlights">
-                    <thead>
+                <table id="externalFlights">
+                    <thead id="externalFlightsHead">
                         <tr>
                             <th>
                                 Flight ID
@@ -143,23 +169,10 @@
                                 Date time
                             </th>
                             <th>
-                                Remove
                             </th>
                         </tr>
                     </thead>
                     <tbody id="externalFlightsBody">
-                        <!--
-                                <tr>
-                                    <td>
-                                    </td>
-                                    <td>
-                                    </td>
-                                    <td>
-                                    </td>
-                                    <td>
-                                    </td>
-                                </tr>
-                        -->
                     </tbody>
                 </table>
             </div>
