1. fixed removing inactive flights bugs 2. fixed using the trash icon (caused to 404 error)

--- a/FlightControlWeb/wwwroot/index.html
+++ b/FlightControlWeb/wwwroot/index.html
@@ -278,7 +278,7 @@
                     <h2 id="externalFlightsHeading" class="mt-5 text-white">
                         External flights
                     </h2>
-                    <table id="externalFlights">
+                    <table class="table" id="externalFlights">
                         <thead id="externalFlightsHead">
                             <tr>
                                 <th>
